# vex-vpn

./: .gitignore  .gitlab-ci.yml  CLAUDE.md  Cargo.toml  README.md  build.rs  dbus.rs  flake.nix  main.rs  module.nix  state.rs  tray.rs  ui.rs
.claude/: settings.json
.github/: copilot-instructions.md
.github/docs/subagent_docs/: basic_fixes_and_analysis_review.md  basic_fixes_and_analysis_spec.md  bug10_dead_stub_spec.md  bug1_state_dir_spec.md  bug2_tray_runtime_spec.md  bug3_kill_switch_spec.md  bug4_switch_sync_spec.md  bug5_load_unit_spec.md  bug6_dbus_conn_reuse_spec.md  bug7_latency_timeout_spec.md  bug8_error_feedback_spec.md  bug9_nav_buttons_spec.md  bugfix_wizard_ks_and_ui_feedback_spec.md  dbus_interactive_auth_review.md  dbus_interactive_auth_spec.md  functional_analysis.md  gui_fixes_review.md  gui_fixes_spec.md  login_serverlist_polkit_review.md  login_serverlist_polkit_spec.md  milestone_b_review.md  milestone_b_security_spec.md  milestone_c_lovable_spec.md  milestone_c_review.md  milestone_d_reliable_spec.md  milestone_d_review.md  milestone_e_review.md  milestone_e_shine_spec.md  nft_portforward_graceful_review.md  nft_portforward_graceful_spec.md  self_install_nixos_fix_spec.md  self_install_review.md  self_install_review_final.md  self_install_spec.md  standalone_connect_review.md  standalone_connect_review_final.md  standalone_connect_spec.md  systemd_killswitch_migration_review.md  systemd_killswitch_migration_spec.md  universal_vpn_client_review.md  (+2 more)
.github/workflows/: ci.yml
assets/: shortcuts.ui
assets/icons/: icons.gresource.xml
docs/: PROJECT_ANALYSIS.md
nix/: module-gui.nix  module-vpn.nix  polkit-vex-vpn.policy
scripts/: preflight.sh
src/: app.rs  config.rs  dbus.rs  helper.rs  history.rs  lib.rs  main.rs  pia.rs  profile.rs  secrets.rs  state.rs  tray.rs  ui.rs  ui_import.rs  ui_login.rs  ui_onboarding.rs  ui_prefs.rs  ui_profiles.rs
src/backend/: mod.rs  openvpn.rs  wireguard.rs
src/parser/: mod.rs  openvpn.rs  wireguard.rs
tests/: config_integration.rs
