[package]
name = "vex-vpn"
version = "0.1.0"
edition = "2021"
description = "VPN GUI for NixOS — WireGuard/PIA backend via systemd"
license = "MIT"

[[bin]]
name = "vex-vpn"
path = "src/main.rs"

[lib]
name = "vex_vpn"
path = "src/lib.rs"

[[bin]]
name = "vex-vpn-helper"
path = "src/bin/helper.rs"

[dependencies]
# GTK4 GUI — 0.7.x is compatible with Rust 1.75+
gtk4 = { version = "0.7", features = ["v4_10"] }
# libadwaita 0.5.x matches gtk4 0.7.x series
libadwaita = { version = "0.5", features = ["v1_4"] }
glib = "0.18"
gio = "0.18"

# Async runtime
tokio = { version = "1", features = ["full"] }

# D-Bus — zbus 3.x is compatible with Rust 1.75
zbus = { version = "3", features = ["tokio"] }

# JSON parsing (PIA state files)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Base64 decode for port-forward payload
base64 = "0.21"

# System tray (KStatusNotifierItem)
ksni = "0.2"

# HTTP client for PIA API — rustls to avoid OpenSSL runtime dependency
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "gzip"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Config persistence
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Desktop notifications via org.freedesktop.Notifications (D-Bus, Wayland+X11)
notify-rust = "4"

# Required for vex-vpn-helper binary (root-uid verification)
libc = "0.2"

# Async MPMC channel for tray→UI messages (B1)
async-channel = "2"

# Stream utilities needed for zbus signal iteration (B3, F7)
futures-util = "0.3"

[dev-dependencies]
# HTTP mocking for PIA API integration tests
wiremock = "0.6"
# Temporary directory creation for isolation in integration tests
tempfile = "3"

[build-dependencies]
glib-build-tools = "0.18"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
