[package]
name = "vex-vpn"
version = "0.1.0"
edition = "2021"
description = "Universal VPN GUI for NixOS — WireGuard and OpenVPN via systemd/NetworkManager"
license = "MIT"

[[bin]]
name = "vex-vpn"
path = "src/main.rs"

[lib]
name = "vex_vpn"
path = "src/lib.rs"

[[bin]]
name = "vex-vpn-helper"
path = "src/bin/helper.rs"

[dependencies]
# GTK4 GUI — 0.7.x is compatible with Rust 1.75+
gtk4 = { version = "0.7", features = ["v4_10"] }
# libadwaita 0.5.x matches gtk4 0.7.x series
libadwaita = { version = "0.5", features = ["v1_4"] }
glib = "0.18"
gio = "0.18"

# Async runtime
tokio = { version = "1", features = ["full"] }

# D-Bus — zbus 3.x is compatible with Rust 1.75
zbus = { version = "3", features = ["tokio"] }

# JSON parsing (state files and history)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# System tray (KStatusNotifierItem)
ksni = "0.2"

# Error handling
anyhow = "1"
thiserror = "1"

# Config persistence
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Desktop notifications via org.freedesktop.Notifications (D-Bus, Wayland+X11)
notify-rust = "4"

# Required for vex-vpn-helper binary (root-uid verification)
libc = "0.2"

# Async MPMC channel for tray→UI messages (B1)
async-channel = "2"

# Stream utilities needed for zbus signal iteration (B3, F7)
futures-util = "0.3"

# WireGuard INI .conf parsing
configparser = "3"

# Profile UUID generation
uuid = { version = "1", features = ["v4", "serde"] }

# Async trait support for VpnBackend trait
async-trait = "0.1"

[dev-dependencies]
# Temporary directory creation for isolation in integration tests
tempfile = "3"

[build-dependencies]
glib-build-tools = "0.18"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
